<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/outputArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:text="@string/_0"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEast"
        app:layout_constraintStart_toStartOf="@+id/guidelineWest"
        app:layout_constraintTop_toTopOf="@+id/guidelineNorth" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Clear"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="549dp"
        tools:layout_editor_absoluteY="125dp" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Decimal"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="487dp" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Equals"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="569dp"
        tools:layout_editor_absoluteY="504dp" />

    <Button
        android:id="@+id/btnAddition"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Addition"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="424dp"
        tools:layout_editor_absoluteY="487dp" />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Subtraction"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="549dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/multiplication"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="405dp"
        tools:layout_editor_absoluteY="371dp" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/division"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="400dp"
        tools:layout_editor_absoluteY="248dp" />

    <Button
        android:id="@+id/btnModulus"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Modulus"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="559dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:text="@string/Sqrt"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="400dp"
        tools:layout_editor_absoluteY="136dp" />

    <Button
        android:id="@+id/btnPlusMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusminus"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="520dp" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="518dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="333dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="329dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="321dp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="209dp" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="110dp" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="117dp" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="117dp" />

</androidx.constraintlayout.widget.ConstraintLayout>